--- a/한단비/movie/movie-react/package.json
+++ b/한단비/movie/movie-react/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.8",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.22.3",
